[package]
name = "rtahin"
version = "0.1.0"
authors = ["Moritz Clasmeier <mtesseract@zsilverratio.net>"]
edition = "2018"

[dependencies]
clap = "2.33"
rpassword = "3.0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust-crypto = "^0.2"
dirs = "2.0.1"
sha2 = "0.8.0"
base64 = "0.10.1"
hex = "0.3.2"
dialoguer = "0.4.0"
lazy_static = "1.3.0"
sodiumoxide = "0.2"
